chore: switching location of constants